# ak

./: .gitignore  Dockerfile  README.md  build.sh
backend/: auth.py  database.py  main.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/alembic copy/: env.py
backend/routers/: routers.py
backend/routers/graph/: graph.py
backend/routers/user/: user.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: Router.tsx  index.tsx
frontend/src/app/: App.tsx  store.ts
frontend/src/app/main/: Main.tsx
frontend/src/app/main/graph/: Graph.tsx  GraphSidebar.tsx  GraphView.tsx  PropsList.tsx
frontend/src/app/main/graph/create/: AddProp.tsx  Create.tsx  CreateLink.tsx  CreateNode.tsx
frontend/src/app/main/graph/delete/: Delete.tsx
frontend/src/app/main/graph/edit/: Edit.tsx  NodePropsEdit.tsx
frontend/src/app/main/graph/info/: Info.tsx  NodeProps.tsx  NodePropsInfo.tsx
frontend/src/app/navbar/: Navbar.tsx
frontend/src/app/profile/: Authorization.tsx  Registration.tsx  User.tsx
