[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ArthurGolubev <gg.arthur.go@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
neo4j = "^5.8.0"
fastapi = {extras = ["all"], version = "^0.95.1"}
loguru = "^0.7.0"
python-cypher = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
